config/bases/tekton-pipelines/resources/namespaces/tekton-pipelines/ingress-dashboard.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - tekton
      secretName: tekton-dashboard-tls
  rules:
    - host: tekton
      http:
        paths:
          - path: /
            backend:
              serviceName: tekton-dashboard
              servicePort: 9097
